--- a/style.css
+++ b/style.css
@@ -3,10 +3,13 @@
     padding: 0;
 }
 
+body{
+    background-color: black;
+}
 
 .main{
     background-image: url(assets/pictures/background.jpg);
-    height: 100vh;
+    height: 107vh;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -14,7 +17,7 @@
 }
 
 .main .box{
-    height: 100vh;
+    height: 107vh;
     width: 100%;
     opacity: 0.66;
     background-color: black;
@@ -45,7 +48,7 @@ nav{
 }
 
 .hero{
-    height: 100%;
+    height: 83%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -93,3 +96,20 @@ nav{
     transform: translateY(-5%);
 }
 
+.hero .input{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    
+}
+
+.separator {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    background: transparent;
+    z-index: 10;
+    top: 10px;
+    
+}
