--- a/style.css
+++ b/style.css
@@ -93,15 +93,47 @@ nav{
 }
 
 .hero{
-    transform: translateY(-5%);
+    transform: translateY(-1%);
 }
 
 .hero .input{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 7px;   
+    margin-top: 20px; 
+}
 
-    
+.input .em{
+    width: 380px;
+    height: 50px;
+    border-radius: 5px;
+    padding-left: 10px;
+    font-size: 1.2rem;
+    color: white;
+    background-color: transparent;
+    border: 1px solid grey;
+
+}
+
+.input .b3{
+    width: 230px;
+    height: 50px;
+    border-radius: 5px;
+    font-size: 1.5rem;
+    color: white;
+    background-color: #e50914;
+    border: none;
+    cursor: pointer;
+    font-family: "Martel Sans", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    text-align: center;
+}
+
+.input .b3:hover{
+    background-color: #b2070f;
+    transition: 0.37s;
 }
 
 .separator {
@@ -113,3 +145,4 @@ nav{
     top: 10px;
     
 }
+
