--- a/style.css
+++ b/style.css
@@ -214,35 +214,22 @@ nav .buttons{
 .card {
     position: relative;
     flex: 0 0 auto;
-    width: 200px;
-    height: 300px;
-    border-radius: 10px;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    width: 150px;
 }
 
 .card img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 10px;
-    z-index: 2;
-    position: relative;
+    border-radius: 5px;
 }
 
 .card .rank {
     position: absolute;
-    left: -20px;
-    bottom: 0;
-    font-size: 8rem;
+    top: 10px;
+    left: 10px;
+    font-size: 2rem;
     font-weight: 900;
     color: white;
-    z-index: 1;
-    -webkit-text-stroke: 2px black;
-    font-family: "Martel Sans", sans-serif;
-    opacity: 0.9;
+    text-shadow: 2px 2px 4px #000;
 }
 
 .reasons {
