--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     background-color: black;
 }
 
-.main{
+.main {
     background-image: url(assets/pictures/background.jpg);
     height: 107vh;
     background-size: cover;
@@ -16,7 +16,7 @@ body{
     position: relative;
 }
 
-.main .box{
+.main .box {
     height: 107vh;
     width: 100%;
     opacity: 0.66;
@@ -25,20 +25,20 @@ body{
     top: 0;
 }
 
-.logo img{
-    color:#e50914;
+.logo img {
+    color: #e50914;
     position: relative;
     z-index: 10;
     width: 9.25rem;
     height: 2.5rem;
-}  
+}
 
-nav .buttons{
+nav .buttons {
     position: relative;
     z-index: 10;
 }
 
-nav{
+nav {
     display: flex;
     margin: auto;
     max-width: 76vw;
@@ -48,7 +48,7 @@ nav{
     padding: 13px 20px;
 }
 
-.hero{
+.hero {
     height: 83%;
     display: flex;
     align-items: center;
@@ -63,14 +63,14 @@ nav{
 
 }
 
-.hero span:first-child{
+.hero span:first-child {
     font-family: "Martel Sans", sans-serif;
     font-weight: 900;
     font-style: normal;
     font-size: 3.5rem;
 }
 
-.hero span:nth-child(2){
+.hero span:nth-child(2) {
     font-family: "Martel Sans", sans-serif;
     font-weight: 900;
     font-style: normal;
@@ -78,7 +78,7 @@ nav{
     line-height: 0.7;
 }
 
-.hero span:nth-child(3){
+.hero span:nth-child(3) {
     font-family: "Martel Sans", sans-serif;
     font-weight: 700;
     font-style: normal;
@@ -86,26 +86,26 @@ nav{
     line-height: 3.5;
 }
 
-.hero span:nth-child(4){
+.hero span:nth-child(4) {
     font-family: "Martel Sans", sans-serif;
     font-weight: 500;
     font-style: normal;
     font-size: 1rem;
 }
 
-.hero{
+.hero {
     transform: translateY(-1%);
 }
 
-.hero .input{
+.hero .input {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 7px;   
-    margin-top: 20px; 
+    gap: 7px;
+    margin-top: 20px;
 }
 
-.input .em{
+.input .em {
     width: 380px;
     height: 50px;
     border-radius: 5px;
@@ -117,7 +117,7 @@ nav{
 
 }
 
-.input .b3{
+.input .b3 {
     width: 230px;
     height: 50px;
     border-radius: 5px;
@@ -133,7 +133,7 @@ nav{
     padding: 5px;
 }
 
-.input .b3:hover{
+.input .b3:hover {
     background-color: #b2070f;
     transition: 0.37s;
 }
@@ -145,17 +145,17 @@ nav{
     background: transparent;
     z-index: 10;
     top: 10px;
-    
+
 }
 
-nav .buttons{
+nav .buttons {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 20px;
 }
 
-.buttons .b1{
+.buttons .b1 {
     height: 35px;
     color: white;
     font-family: "Martel Sans", sans-serif;
@@ -172,7 +172,7 @@ nav .buttons{
     padding: 2px;
 }
 
-.buttons .b2{
+.buttons .b2 {
     width: 90px;
     height: 30px;
     border-radius: 5px;
@@ -188,7 +188,7 @@ nav .buttons{
     padding: 2px;
 }
 
-.buttons .b2:hover{
+.buttons .b2:hover {
     background-color: #b2070f;
     transition: 0.37s;
 }
@@ -213,14 +213,45 @@ nav .buttons{
 
 .card {
     position: relative;
-    flex: 0 0 auto;
-    width: 150px;
+    width: 200px;
+    flex-shrink: 0;
+    margin-right: 20px;
 }
 
 .card img {
     width: 100%;
-    border-radius: 5px;
+    border-radius: 0.5rem;
+    position: relative;
+    z-index: 2;
+    display: block;
 }
+
+.card .rank {
+    position: absolute;
+    bottom: -20px;
+    left: -15px;
+    font-size: 9rem;
+    font-weight: 900;
+    color: white;
+    z-index: 1;
+    opacity: 0.3;
+    line-height: 1;
+    -webkit-text-stroke: 2px black;
+    font-family: "Martel Sans", sans-serif;
+}
+
+.trending-row {
+    display: flex;
+    overflow-x: auto;
+    padding-bottom: 20px;
+    scrollbar-width: none;
+}
+
+.trending-row::-webkit-scrollbar {
+    display: none;
+}
+
+
 
 .card .rank {
     position: absolute;
